Move to Java 17 at runtime and drop Java 8 (#697)
* Drop Java 8
Move to Java 11 at compile time
Move to Java 17 as runtime

Signed-off-by: Paolo Patierno <ppatierno@live.com>

* Bumped different Maven plugin versions
Moved to Spotbugs

Signed-off-by: Paolo Patierno <ppatierno@live.com>

* Fixed javadoc warning by adding comments

Signed-off-by: Paolo Patierno <ppatierno@live.com>

* Taking Java 11 as main build to publish artifacts

Signed-off-by: Paolo Patierno <ppatierno@live.com>

* Updated CHANGEDLOG about Java version changes

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Signed-off-by: Paolo Patierno <ppatierno@live.com>