@@ -69,11 +69,5 @@ if [ "$FIPS_MODE" = "disabled" ]; then
     export JAVA_OPTS="${JAVA_OPTS} -Dcom.redhat.fips=false"
 fi
 
-# Deny illegal access option is supported only on Java 9 and higher
-JAVA_MAJOR_VERSION=$(java -version 2>&1 | sed -E -n 's/.* version "([0-9]*).*$/\1/p')
-if [ "$JAVA_MAJOR_VERSION" -ge "9" ] ; then
-  JAVA_OPTS="${JAVA_OPTS} --illegal-access=deny"
-fi
-
 # starting Kafka Bridge with final configuration
 exec /usr/bin/tini -s -w -e 143 -- "${MYPATH}"/../kafka_bridge_run.sh --config-file=/tmp/kafka-bridge.properties "$@"
